# inline_java.rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  ci.sh  release-plz.toml
.claude/skills/sync-docs/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release-plz.yml
inline_java/: CHANGELOG.md  Cargo.toml
inline_java/com/example/demo/: Greetings.java  HelloWorld.java
inline_java/src/: lib.rs
inline_java/tests/: flags.rs  input_args.rs  return_types.rs
inline_java_core/: CHANGELOG.md  Cargo.toml  README.md
inline_java_core/src/: lib.rs
inline_java_demo/: Cargo.toml
inline_java_demo/src/: main.rs
inline_java_demo/tests/: arg_passing.rs  flags.rs  input_args.rs  nested_generics.rs
inline_java_macros/: CHANGELOG.md  Cargo.toml  README.md
inline_java_macros/src/: lib.rs
