[workspace]
resolver = "2"

members = [
  "inline_java_core",
  "inline_java_macros",
  "inline_java",
  "inline_java_demo",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Carlo Dell'Acqua <carlo.dellacqua97@gmail.com>"]
repository = "https://github.com/cdellacqua/inline_java.rs"
homepage = "https://github.com/cdellacqua/inline_java.rs"
keywords = ["java", "jvm", "macro", "interop", "ffi"]
