[package]
name = "inline_java"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Embed Java directly in Rust — evaluated at program runtime or at compile time"
keywords = ["java", "jvm", "macro", "interop", "ffi"]
categories = ["development-tools::ffi", "api-bindings"]
readme = "README.md"

[dependencies]
inline_java_core = { version = "0.1.0", path = "../inline_java_core" }
inline_java_macros = { version = "0.1.0", path = "../inline_java_macros" }
