[package]
name = "inline_java_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Runtime support crate for inline_java — not intended for direct use"
keywords.workspace = true
categories = ["development-tools::ffi", "api-bindings"]
readme = "README.md"

[dependencies]
thiserror = "2.0.18"
shellexpand = "3.1.2"
fd-lock = "4.0.4"
dirs = "6.0.0"
