[package]
name = "inline_java_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
inline_java_core = { path = "../inline_java_core" }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.44"
litrs = { version = "1.0.0", features = ["proc-macro2"] }
